# findstring

./: MANIFEST.in  Makefile  README.md  pyproject.toml
dev/: test.py  test.sh  upload.sh
src/findstring/: __init__.py  entry.py  findstring.py  grep.py  search.py  show.py
